Added necessary packages to environment and clarified installation instructions.

--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -52,6 +52,8 @@
     "conda activate complexapps-2024\n",
     "```\n",
     "\n",
+    "Launch `jupyter lab` while in this environment.\n",
+    "\n",
     "### Step 1 if you previously installed the Tutorial Materials: Don't Forget to Pull\n",
     "\n",
     "If you have already installed the tutorial materials, make sure you have the latest version of the tutorial materials by pulling the latest changes from the GitHub repository."
