Renumbered notebooks and added placeholders for tasks not yet written.  Added to do lists to notebooks.

--- a/01a_getting_started.ipynb
+++ b/01a_getting_started.ipynb
@@ -5,7 +5,12 @@
    "id": "00b54325-2a3f-4c98-921b-d8d6ff920a58",
    "metadata": {},
    "source": [
-    "# Getting Started"
+    "# Review of Jupyter Notebooks and Jupyter Widgets\n",
+    "\n",
+    "## TO DO IN THIS NOTEBOOK\n",
+    "- [ ] Restructure using Matt's review of all Jupyter widgets\n",
+    "- [ ] Add brief discussion of additional Jupyter widget packages, notably `ipydatagrid` and `ipympl`\n",
+    "- [ ] Fix broken image links if necessary"
    ]
   },
   {
@@ -15,6 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This loads the dashboard module which we will develop but includes\n",
+    "# jupyter magics for handling exceptions nicely.\n",
     "import dashboard"
    ]
   },
