--- a/01b_workflow.ipynb
+++ b/01b_workflow.ipynb
@@ -5,7 +5,12 @@
    "id": "4b0c4908-c142-4be8-ae18-3d91ddb2a33a",
    "metadata": {},
    "source": [
-    "# Smoothing Land-Ocean Temperature Data\n",
+    "# Our Goal: An App for Smoothing Land-Ocean Temperature Data\n",
+    "\n",
+    "## TO DO IN THIS NOTEBOOK\n",
+    "- [ ] Restructure this to introduce the problem/data more quickly\n",
+    "- [ ] Add discussion of our goal to develop an app that allows quick exploration of different smoothing algorithms/settings.\n",
+    "- [ ] Show the final app in action?\n",
     "\n",
     "This workflow **loads a data file** with global temperature data and **smooths it with several different algorithms**. At the end you can **select a particular year range** and **create a new data file** containing the smoothed data for the range desired."
    ]
