--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -5,8 +5,22 @@
    "id": "a55fea8a-ca20-4dcf-a452-67cae672b555",
    "metadata": {},
    "source": [
-    "# nbdev"
+    "# nbdev\n",
+    "\n",
+    "## TO DO IN THIS NOTEBOOK\n",
+    "- [ ] Restructure as a much tighter review of nbdev and how it can help in the development of a package to be used for our dashboard project\n",
+    "- [ ] Be sure to mention the challenges of using nbdev, notably the need to be careful about what you export to packages (do we keep discussion of literate programming in here?)\n",
+    "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable give the number of data points, etc.)?\n",
+    "- [ ] Add hyperlinks to the nbdev documentation and other resources"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee756cbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
