Some more tweaks to notebooks to reflect existing outline.

--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -115,8 +115,8 @@
     "    - ipywidgets\n",
     "2. **[nbdev](https://nbdev.fast.ai)`**: Building a simple dashboard and exporting it to Python modules\n",
     "3. **[pydantic](https://docs.pydantic.dev/latest/) and [ipyautoui](https://pyautogui.readthedocs.io/en/latest/)**: Tools for validating inputs and automatically building settings UIs\n",
-    "4. **Deployment**: Review of options for deploying a Jupyter notebook as a web app\n",
-    "5. **[solara](https://solara.dev)**: Another option for building components or entire applications declaratively."
+    "4. **[solara](https://solara.dev)**: Another option for building components or entire applications declaratively.\n",
+    "5.  **Deployment**: Review of options for deploying a Jupyter notebook as a web app\n"
    ]
   },
   {
