--- a/03b_ipyautoui.ipynb
+++ b/03b_ipyautoui.ipynb
@@ -12,9 +12,10 @@
     "## TO DO IN THIS NOTEBOOK\n",
     "- [ ] Add a brief description of the package and its history?\n",
     "- [ ] Show how to use ipyautoui to create a simple settings panel relatively quickly\n",
-    "- [ ] Mention the active development of the package and the fact that it is still a bit buggy\n",
-    "- [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
-    "- [ ] Have them migrate the existing settings panel in the dashboard project to ipyautoui"
+    "  - [ ] Mention the active development of the package and the fact that it is still a bit buggy\n",
+    "  - [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
+    "- [ ] Have them replace existing settings widgets with control widget generated with ipyautoui\n",
+    "- [ ] Connect new control widget to dashboard"
    ]
   }
  ],
