--- a/03a_pydantic.ipynb
+++ b/03a_pydantic.ipynb
@@ -12,9 +12,12 @@
     "## TO DO IN THIS NOTEBOOK\n",
     "- [ ] Note the problem of data validation and the complexity of the multiple observers pattern needed to handle that even for this relatively simple dashboard. We want to improve our previous dashboard by better handling data validation and more easily handling the generation of the settings UI.\n",
     "- [ ] Review history of type annotation (and their use in dataclasses) and data validation in Python (?)\n",
+    "- [ ] Introduce classes\n",
+    "- [ ] Introduce type annotations\n",
     "- [ ] Introduce Pydantic\n",
-    "- [ ] Show how to define a Pydantic model\n",
-    "- [ ] Show how to validate data using a Pydantic model including constraints\n",
+    "- [ ] Show how to define a Pydantic model and use it to \n",
+    "  - [ ] validate data using a Pydantic model\n",
+    "  - [ ] express constraints of smoothing window/order in pydantic\n",
     "- [ ] Mention other features of Pydantic that may be relevant to our dashboard\n",
     "- [ ] Have them migrate the existing data validation in the dashboard project to pydantic (might require a lot of refactoring of the code)"
    ]
