Moved some instructions from 00_welcome to README where they belong.

--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -29,32 +29,7 @@
    "id": "424ab3ed-79d5-47d0-966a-2c4d9a9d8518",
    "metadata": {},
    "source": [
-    "## Installation Instructions\n",
-    "\n",
-    "### Step 1: Install Tutorial Materials\n",
-    "If you haven't already copied the tutorial materials to your computer, you can do so by cloning the tutorial repository. To do this, you will need to have Git installed on your system. You can then clone the repository by running the following command:\n",
-    "\n",
-    "```bash\n",
-    "\n",
-    "git clone https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial\n",
-    "```\n",
-    "\n",
-    "### Step 2: Install Required Libraries\n",
-    "We provide a `conda` environment file that you can use to create an environment with all the required libraries. To create the environment, navigate to the directory where you cloned the tutorial repository and run the following command:\n",
-    "\n",
-    "```bash\n",
-    "conda env create -f environment.yml\n",
-    "```\n",
-    "\n",
-    "You can activate this environment by running:\n",
-    "\n",
-    "```bash\n",
-    "conda activate complexapps-2024\n",
-    "```\n",
-    "\n",
-    "Launch `jupyter lab` while in this environment.\n",
-    "\n",
-    "### Step 1 if you previously installed the Tutorial Materials: Don't Forget to Pull\n",
+    "## Don't Forget to Pull\n",
     "\n",
     "If you have already installed the tutorial materials, make sure you have the latest version of the tutorial materials by pulling the latest changes from the GitHub repository."
    ]
