--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` python module that contains all the files we need for our dashboard.  We can use some of the cells in this notebook to create a python module that we can import to other notebooks. \n",
     "\n",
-    "## Export cells to __init__.py\n",
+    "## Export cells to `__init__.py`\n",
     "\n",
     "What will the content of this notebook be exactly? We are going to create a few line and cell magics that we will use through the tutorial. We want these magic functions to be accessible anywhere. Therefore, if we want them to go in `__init__.py` the default export for this notebook needs to be `__init__`. Let's set the `default_exp` directive below."
    ]
@@ -84,7 +84,9 @@
    "source": [
     "## #| export\n",
     "\n",
-    "This directive tells nbdev that we want to export this code to the module specified by `default_exp`. Notice that we need to export everything that we want to end up in the python file, so we can't forget to export our imports."
+    "This directive tells nbdev that we want to export this code to the module specified by `default_exp`. Notice that we need to export everything that we want to end up in the python file, so we can't forget to export our imports.\n",
+    "\n",
+    "**NOTE:** When performing an export, the cell can only contain imports OR some other Python commands, but not both.  This is due to the way `nbdev` parses the cells to analyze for documentation."
    ]
   },
   {
@@ -95,7 +97,6 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "\n",
     "from IPython.core.magic import register_line_magic, register_cell_magic, needs_local_scope\n",
     "from IPython import get_ipython\n",
     "import re, sys, os"
