--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -9,18 +9,10 @@
     "\n",
     "## TO DO IN THIS NOTEBOOK\n",
     "- [ ] Restructure as a much tighter review of nbdev and how it can help in the development of a package to be used for our dashboard project\n",
-    "- [ ] Be sure to mention the challenges of using nbdev, notably the need to be careful about what you export to packages (do we keep discussion of literate programming in here?)\n",
+    "- [x] Be sure to mention the challenges of using nbdev, notably the need to be careful about what you export to packages (do we keep discussion of literate programming in here?)\n",
     "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable give the number of data points, etc.)?\n",
-    "- [ ] Add hyperlinks to the nbdev documentation and other resources"
+    "- [x] Add hyperlinks to the nbdev documentation and other resources"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee756cbd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -29,7 +21,11 @@
    "source": [
     "## What is nbdev?\n",
     "\n",
-    "nbdev is a notebook-driven development platform. Simply write notebooks with lightweight markup and get high-quality documentation, tests, continuous integration, and packaging"
+    "- [nbdev](https://nbdev.fast.ai) - a notebook-driven development platform. Simply write notebooks with lightweight markup and get high-quality documentation, tests, continuous integration, and packaging. \n",
+    "\n",
+    "- [\"modular\" nbdev](https://nbdev.fast.ai/tutorials/modular_nbdev.html) - makes use of only the most basic features of nbdev. It will allow us take any standalone notebook and turn it into a Python script or module. Modular nbdev will allow us to bridge the gap between messy, exploratory tutorial notebooks and clean, well-organized Python modules that we can import from. \n",
+    "\n",
+    "The following introduction to \"modular nbdev\" is a much simpler than the [nbdev tutorial](https://nbdev.fast.ai/tutorials/tutorial.html), because we won't create a continuous integration Python package that can be uploaded to PyPi or Anaconda. We will simply use notebooks to create clean python modules that we can use to build our dashboards and web apps. From here on out, when we mention nbdev, we are really referring to modular nbdev. "
    ]
   },
   {
@@ -39,31 +35,31 @@
    "source": [
     "## What will we learn in this notebook?\n",
     "\n",
-    "`nbdev` sounds pretty cool, but there's also a lot going on there. Maybe you haven't even heard of continuous integration before. In this notebook we will go over how to use modular nbdev to create a python module. This is a much less complex introduction than the nbdev end-to-end walkthrough, because we won't create a whole package that can be uploaded to PyPi or Anaconda. We will simply use notebooks to create clean python modules that we can use to build our dashboards and web apps. \n",
-    "\n",
-    "\n",
     "### Export code to modules with nb_export\n",
     "- `#| default_exp` directive to signal which module to export to\n",
     "- `#| export` directive to signal that a cell is to be included in the export\n",
     "- `nbdev.export.nb_export` with the name of the notebook and export directory\n",
+    "- benefits and challenges of nbdev\n",
     "\n",
     "### End Goal\n",
     "\n",
-    "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` python module that contains all the files we need for our dashboard.  We can use some of the cells in this notebook to create a python module that we can import to other notebooks. \n",
-    "\n",
-    "## Export cells to `__init__.py`\n",
-    "\n",
-    "What will the content of this notebook be exactly? We are going to create a few line and cell magics that we will use through the tutorial. We want these magic functions to be accessible anywhere. Therefore, if we want them to go in `__init__.py` the default export for this notebook needs to be `__init__`. Let's set the `default_exp` directive below."
+    "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` python module that contains all the files we need for our dashboard.  We can use some of the cells in this notebook to create a python module that we can import to other notebooks. "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5c386eed-7542-4ff4-aa6e-cc3036c35beb",
+   "cell_type": "markdown",
+   "id": "3cc86c65-f783-492c-bd8d-926da31f3ae5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#| default_exp __init__"
+    "## nbdevExports\n",
+    "\n",
+    "### Benefits\n",
+    "\n",
+    "The real benefit of being able to exclude code cells lies in the ability to tell the story of how your code came into it's final form, whether for a tutorial or just because you value documenting code design and decision making. Instead of cleaning up our notebooks when we have achieved your coding goal, we can leave in all the valuable information we left behind along the way. This is helpful for another developer or our future-selves who may be trying to read our code. We don't have to hold as many variables in their head, because we can see the steps broken down and read the intermediate values without having to use a debugger.\n",
+    "\n",
+    "- show intermediate steps for clarity and testing\n",
+    "- document failed attempts and design decisions\n",
+    "- develop iteratively without having to \"clean\" code"
    ]
   },
   {
@@ -71,7 +67,7 @@
    "id": "f9f1341d-d52e-4e12-a293-a3e510bb8a71",
    "metadata": {},
    "source": [
-    "## #| default_exp\n",
+    "### #| default_exp\n",
     "\n",
     "The `default_exp` directive is required of all notebooks used by nbdev. Notice that nbdev directives all start with \"#|\". \n",
     "This requires that we add a default export directive to our notebook. It tells nbdev what module to export to. You can also give it a “dotted module names” as is done with python packages. For example, a default export to `some.module` will create a file called `some/module.py`."
@@ -82,7 +78,7 @@
    "id": "2bf7ccc7-7160-430e-b73d-3b68f543ed96",
    "metadata": {},
    "source": [
-    "## #| export\n",
+    "### #| export\n",
     "\n",
     "This directive tells nbdev that we want to export this code to the module specified by `default_exp`. Notice that we need to export everything that we want to end up in the python file, so we can't forget to export our imports.\n",
     "\n",
@@ -90,30 +86,41 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a54f937-2bd7-473d-8dc9-b575de271b45",
+   "cell_type": "markdown",
+   "id": "deb1ee04-9bdb-4131-9361-89a2dce6e90a",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#| export\n",
-    "from IPython.core.magic import register_line_magic, register_cell_magic, needs_local_scope\n",
-    "from IPython import get_ipython\n",
-    "import re, sys, os"
+    "### Challenges\n",
+    "\n",
+    "The great benefit of using nbdev for development can also be the most challening part of using nbdev - making sure we have not forgotten to export all the right cells to our resulting Python file. If you ever get a confusing or unexpected error on importing a module created with nbdev, it's very likely you forgot to export one of your code cells. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4f9cf0eb-4e6d-4f05-b3c5-c85b6ba4f26f",
+   "id": "f6824dc7-03a7-4a76-91b3-4494c64fbdfb",
    "metadata": {},
    "source": [
-    "## Literate Programming \n",
+    "## Create `dashboard` module\n",
     "\n",
-    "You might be wondering, other than markdown cells, why wouldn't we want to always export our code cells? This is a fair question. If you clean up your notebooks after you are done developing the code, you might not see the utitlity here yet. But the real value of being able to exclude code cells lies in the ability to tell the story of how your code came into it's final form. Instead of cleaning up your notebooks when you have achieved your coding goal, you can leave in all the valuable information you left behind along the way. This could include design planning and decision making. \n",
-    "\n",
-    "Have you ever been looking at old code and scoffed at the way you designed something? Maybe you decide to go clean it up, only to gradually realize that you've made this mistake before. There was a reason you left in this ugly solution, wasn't there! Now you've wasted a lot of time because you didn't take the time to record your decision-making the first time. Of course, you may log your thoughts in GitHub issues, but leaving behind your logical process in the notebook will make sure that you don't loose track of it down the road. Your thoughts and decisions remain transparent for your future self, or that lucky person that inherits all your code. \n",
-    "\n",
-    "Another reason we might want to have non-exported cells is that we want to be able to use or test our code without having to switch context to the terminal or another file. And again, this is helpful for another developer or our future-selves who may be trying to read our code. They don't have to hold as many variables in their head, because they can see the steps broken down and read the intermediate values without having to use a debugger. Let's try out this implicit benefit for ourselves below."
+    "How we will use nbdev to create a python module - `dashboard` - that we will use to create modules that contain files we will use improve our development experience."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "139e929d-6eb0-4b45-b9cb-8121faf4a6c6",
+   "metadata": {},
+   "source": [
+    "The first thing we need to do is create a default export statement."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e4e22d8-5e1b-42f9-938c-e96e56504a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Add default export directive for the dashboard module"
    ]
   },
   {
@@ -124,6 +131,19 @@
     "### %answer line magic\n",
     "\n",
     "Below is the code that defines the cell magic function called `exception`. Often in tutorials, we want to demonstrate an intentional error. The default behavior of a Jupyter Notebook is to print the full traceback, which can be quite lengthy and distracting. In addition, if the participant wants to \"Restart and Run All Cells\" due to some problem they encountered, the execution will get hung up where the error is. In our case, when running a cell with an error for demonstrative purposes, we want to display the error, but we don't want to display the traceback or prevent the execution of the next cell. This cell magic achieves this desired behavior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a54f937-2bd7-473d-8dc9-b575de271b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: add the missing export directive\n",
+    "from IPython.core.magic import register_line_magic, register_cell_magic, needs_local_scope\n",
+    "from IPython import get_ipython\n",
+    "import re, sys, os"
    ]
   },
   {
@@ -188,7 +208,7 @@
    "id": "49568f0d-4ad9-4727-9fa0-bcdf3005e0bb",
    "metadata": {},
    "source": [
-    "Isn't literate programming great! It also means that we can build a very real output from a series of tutorial-style notebooks. All the python modules and packages in this tutorial were produced from the tutorial notebooks."
+    "Isn't nbdev great! Instead of playing with toy examples, we can build a sophisticated, clean Python application from a series of tutorial-style notebooks. All the python modules and packages in this tutorial were produced from the tutorial notebooks."
    ]
   },
   {
@@ -392,16 +412,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de626c60-1a66-4e28-9285-3cf779b7dbee",
-   "metadata": {},
-   "source": [
-    "## Literate Programming\n",
-    "\n",
-    "Of course, nbdev has a lot of other nice features, but the notebook export is the core of literate programming. You can do your work incrementally, leave in a lot of markdown, and read your code like a book. At the same time, you can keep the code in clean, importable python files."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "4fa634ee-53f9-41d1-8ad4-8d55f5e154be",
    "metadata": {},
    "source": [
@@ -456,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
