Updated welcome page to fix grammar and add some links.

--- a/00_welcome.ipynb
+++ b/00_welcome.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "**Instructors:** Nicole Brewer, Matt Craig, Juan Cabanela, and Maarten Breddels\n",
     "\n",
-    "**Spacetime Coordinates:** 09 July 2024 13:30–17:30 (US/Pacific), Room 318"
+    "**Spacetime Coordinates:** 09 July 2024 13:30–17:30 (US/Pacific), Tacoma Convention Center Room 318"
    ]
   },
   {
@@ -19,9 +19,9 @@
    "source": [
     "## Prerequisite Knowledge\n",
     "\n",
-    "To follow along with this tutorial, you will want familiar with Jupyter widgets (aka ipywidgets).\n",
+    "To follow along with this tutorial, you will want familiar with [Jupyter widgets](https://ipywidgets.readthedocs.io/en/latest/) (aka `ipywidgets`).\n",
     "\n",
-    "We will write and make use of libraries to automate the building of more complicated widgets, but familiarity with Jupyter widgets will be needed to exploit these more complicated widgets."
+    "We will write and make use of some additional Python packages to automate the building of more complicated widgets, but familiarity with Jupyter widgets will be needed to exploit these more complicated widgets."
    ]
   },
   {
@@ -31,7 +31,7 @@
    "source": [
     "## Don't Forget to Pull\n",
     "\n",
-    "If you have already installed the tutorial materials, make sure you have the latest version of the tutorial materials by pulling the latest changes from the GitHub repository."
+    "If you have already installed the tutorial materials, make sure you have the latest version of the tutorial materials by pulling the latest changes from the [GitHub repository](https://github.com/Jupyter4Science/scipy2024-jupyter-widgets-tutorial)."
    ]
   },
   {
@@ -53,16 +53,16 @@
    "source": [
     "## Introductions\n",
     "\n",
-    "* **Who are we**\n",
-    "* **Who are you**\n",
-    "    * Who here has a workflow in a Jupyter Notebook\n",
-    "    * What domains are you from\n",
-    "    * Do you consider yourself a research? Developer? Something else?\n",
-    "* **What are you familiar with already**\n",
-    "    * Python\n",
-    "    * Jupyter\n",
-    "    * JupyterLab\n",
-    "    * ipywidgets"
+    "- **Who are we?**\n",
+    "- **Who are you?**\n",
+    "    - Who here has a workflow in a Jupyter Notebook?\n",
+    "    - What domains are you from?\n",
+    "    - Do you consider yourself a researcher? Developer? Something else?\n",
+    "- **What are you familiar with already?**\n",
+    "    - Python\n",
+    "    - Jupyter\n",
+    "    - JupyterLab\n",
+    "    - ipywidgets"
    ]
   },
   {
@@ -72,8 +72,8 @@
    "source": [
     "## Expectations\n",
     "\n",
-    "- please interrupt with questions at any time\n",
-    "- use stickies to indicate when you are done with an exercise"
+    "- Please interrupt with questions at any time!\n",
+    "- Use stickies to indicate when you are done with an exercise."
    ]
   },
   {
@@ -88,17 +88,15 @@
     "    - Benefits of developing in Jupyter\n",
     "    - Benefits of JupyterLab\n",
     "    - ipywidgets\n",
-    "2. **[nbdev](https://nbdev.fast.ai)`**: Building a simple dashboard and exporting it to Python modules\n",
+    "2. **[nbdev](https://nbdev.fast.ai)**: Building a simple dashboard and exporting it to Python modules\n",
     "3. **[pydantic](https://docs.pydantic.dev/latest/) and [ipyautoui](https://pyautogui.readthedocs.io/en/latest/)**: Tools for validating inputs and automatically building settings UIs\n",
     "4. **[solara](https://solara.dev)**: Another option for building components or entire applications declaratively.\n",
-    "5.  **Deployment**: Review of options for deploying a Jupyter notebook as a web app\n"
+    "5.  **Deployment**: Review of options for deploying a Jupyter notebook as a web app\n",
+    "    - **[Binder](https://mybinder.org/)** - Turn a GitHub repository into a collection of interactive notebooks\n",
+    "    - **[Voilà](https://voila.readthedocs.io/en/stable/)** - Turn Jupyter notebooks into standalone web apps using server-side rendering\n",
+    "    - **[Voici](https://github.com/voila-dashboards/voici)** - Turn Jupyter notebooks into standalone web apps using client-side rendering\n",
+    "    - **[GitHub Pages](https://pages.github.com/)** - Host a static website directly from a GitHub repository (can be used with Voici)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0cbc461b",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -106,6 +104,10 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
