Move a to do item between notebooks.

--- a/02b_widgets.ipynb
+++ b/02b_widgets.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# Dashboard Widgets\n",
-    "In this module, we will use ipywidgets to turn our workflow into a data dashboard. To achieve this, we have several substeps to accomplish. Some are the same as the original workflow. New steps are bolded."
+    "In this module, we will use ipywidgets to turn our workflow into a data dashboard. To achieve this, we have several substeps to accomplish. Some are the same as the original workflow. New steps are bolded.\n",
+    "\n",
+    "- [ ] Get to the point where a first version of the dashboard package is created, but note the complexity in the handling of all the settings since we require observer functions to handle all the individual settings (since they are separate widgets).  Do we mention the need to code up validation of the settings (e.g. - We need to ensure the degree of the fit was reasonable give the number of data points, etc.)?"
    ]
   },
   {
