Removed to do list from nbdev notebook as all items done.

--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -5,13 +5,7 @@
    "id": "a55fea8a-ca20-4dcf-a452-67cae672b555",
    "metadata": {},
    "source": [
-    "# Introducing nbdev: A Notebook-Driven Development Platform\n",
-    "\n",
-    "## TO DO IN THIS NOTEBOOK\n",
-    "- [x] Restructure as a much tighter review of nbdev and how it can help in the development of a package to be used for our dashboard project\n",
-    "- [x] Be sure to mention the challenges of using nbdev, notably the need to be careful about what you export to packages (do we keep discussion of literate programming in here?)\n",
-    "- [x] Add hyperlinks to the nbdev documentation and other resources\n",
-    "- [ ] REMOVE THE ANSWERS BELOW ONCE FULLY TESTED (save to answers?)"
+    "# Introducing nbdev: A Notebook-Driven Development Platform"
    ]
   },
   {
