Added a review of the steps that will be taken in the nbdev notebook before taking them.

--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -23,7 +23,13 @@
     "\n",
     "### End Goal\n",
     "\n",
-    "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` Python module that contains all the files we need for our dashboard."
+    "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` Python module that contains all the files we need for our dashboard.\n",
+    "\n",
+    "### Steps You Will Take In This Notebook\n",
+    "In this notebook you will:\n",
+    "1. Define the target file/module for export using `#| default_exp` directive\n",
+    "2. Mark selected cells for export using `#| export` directive\n",
+    "3. Export the selected cells to a module in the `dashboard` package using the `nb_export()` function."
    ]
   },
   {
@@ -316,11 +322,11 @@
    "id": "9c7ecc7a-0058-4d2f-be99-0d50a6fe0519",
    "metadata": {},
    "source": [
-    "## `nb_export`: Exporting the notebook to a Python module\n",
+    "## `nb_export()`: Exporting the notebook to a Python module\n",
     "\n",
-    "Finally, we can use the `nb_export` function to export the cells we selected into a Python file. The second parameter tells nbdev which package to export the module to. Let's go ahead and export this notebook to the `dashboard` package.\n",
+    "Finally, we can use the `nb_export()` function to export the cells we selected into a Python file. The second parameter tells nbdev which package to export the module to. Let's go ahead and export this notebook to the `dashboard` package.\n",
     "\n",
-    "Note that the `nb_export` function reads the notebook from disk before creating the package directory, so you will need to save your notebook before running the export!\n",
+    "Note that the `nb_export()` function reads the notebook from disk before creating the package directory, so you will need to save your notebook before running the export!\n",
     "\n",
     "> **IMPORTANT**: Do not forget to save before exporting the notebook, or your most recent changes will not make it into `__init__.py` file in the `dashboard` directory. It is also a good habit to \"Restart Kernel and Clear All Outputs\" and then save your notebook at the same time as you export. That way, when you get around to committing your code, your `git diff` isn't filled up with a bunch of serial numbers and other unintelligible things."
    ]
