Cleaned up the notebooks adding 'headers' with essentially a review of the goal of that notebook and the steps that will be worked through before actually doing them.

--- a/01b_workflow.ipynb
+++ b/01b_workflow.ipynb
@@ -5,9 +5,28 @@
    "id": "4b0c4908-c142-4be8-ae18-3d91ddb2a33a",
    "metadata": {},
    "source": [
-    "# Our Goal: An App for Smoothing Land-Ocean Temperature Data\n",
+    "# Designing A Web App for Exploring Land-Ocean Temperature Data\n",
     "\n",
-    "For this tutorial, we will be developing a small web app that will provide a graphical user interface (GUI) for exploring a dataset that contains global land-ocean temperature data. The data is stored in a CSV file.\n",
+    "### Goal of this Notebook\n",
+    "\n",
+    "This notebook is designed to provide a review of the data and the smoothing algorithms we will use in the web app being developed as a part of this tutorial.\n",
+    "\n",
+    "### Steps You Will Take In This Notebook\n",
+    "In this notebook you will:\n",
+    "1. Review how to load data from a CSV file into a `pandas` DataFrame.\n",
+    "2. Plot the data to visualize the temperature trends using the `matplotlib` library.\n",
+    "3. Review the smoothing algorithms we will use in the web app and add smoothed data to the DataFrame (and plot).\n",
+    "4. Revise how to export a selected subset of the data to a new CSV file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea7e3b45",
+   "metadata": {},
+   "source": [
+    "## Describing the Elements of our Dashboard\n",
+    "\n",
+    "Across all the notebooks in this tutorial, we will be developing a small web app that will provide a graphical user interface (GUI) for exploring a dataset that contains global land-ocean temperature data. The data is stored in a CSV file.\n",
     "\n",
     "We will build the web app using a Jupyter notebook where our workflow will:\n",
     "- **load a data file** with global temperature data and\n",
@@ -35,7 +54,9 @@
    "id": "90084ed2-dcc5-4a98-a697-02b36bdba826",
    "metadata": {},
    "source": [
-    "## Load data from file"
+    "## Load data from file\n",
+    "\n",
+    "We have a data file contains the global land-ocean temperature data from 1880 to 2020 that we would ultimately like to visualize using a web app. We will start by loading the data for this tutorial from the CSV file into a `pandas` DataFrame."
    ]
   },
   {
@@ -58,7 +79,9 @@
    "id": "36d691eb-4284-4624-bf57-0f1cdf80f5ab",
    "metadata": {},
    "source": [
-    "## Plot original data"
+    "## Plotting the Raw Data\n",
+    "\n",
+    "We will plot the raw data to visualize the temperature trends."
    ]
   },
   {
@@ -82,7 +105,7 @@
    "id": "a4922ab5-9a59-4be1-913b-a4935764bee6",
    "metadata": {},
    "source": [
-    "## Add column for Savitzky-Golay filter\n",
+    "## Adding Columns for Filtered Data\n",
     "\n",
     "Let's implement the [Savitzky-Golay filter](https://en.wikipedia.org/wiki/Savitzky–Golay_filter) and add a new column to the data frame with the smoothed data.  This filter is a type of low-pass filter that can be used for smoothing noisy data. The \"moving average\" filter common in financial data analysis is a special case of the Savitzky-Golay filter with polynomial order 1."
    ]
@@ -131,7 +154,9 @@
    "id": "2ae0c6d8-a9ca-421d-98c5-e736103caa36",
    "metadata": {},
    "source": [
-    "## Select a range of data"
+    "## Selecting a Subset of Data to Export\n",
+    "\n",
+    "`pandas` makes it easy to select a subset of the data. We will select a subset of the data covering the 60 year period from 1920 to 1980, plot it, and then export it to a new CSV file."
    ]
   },
   {
@@ -149,14 +174,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "da8c6ed4-b684-4b39-8ed4-721163c1c658",
-   "metadata": {},
-   "source": [
-    "## Plot selected data with smoothed curve"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7b21668d-a050-406c-9179-2311c547cdf3",
@@ -171,14 +188,6 @@
     "plt.plot(subset_df['Year'], subset_df[moving_avg_col], label='Moving Average Filtered')\n",
     "plt.legend()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2b6311c9-1154-402f-b4fb-1cc5860161bb",
-   "metadata": {},
-   "source": [
-    "## Save selected data to file"
    ]
   },
   {
