--- a/02a_nbdev.ipynb
+++ b/02a_nbdev.ipynb
@@ -5,7 +5,17 @@
    "id": "a55fea8a-ca20-4dcf-a452-67cae672b555",
    "metadata": {},
    "source": [
-    "# Introducing nbdev: A Notebook-Driven Development Platform"
+    "# Introducing nbdev: A Notebook-Driven Development Platform\n",
+    "\n",
+    "### Goal of this Notebook\n",
+    "\n",
+    "Working through of this notebook should help you to understand how we can use nbdev to create a `dashboard` Python module that contains all the files we need for our dashboard within a Jupyter notebook.\n",
+    "\n",
+    "### Steps You Will Take In This Notebook\n",
+    "In this notebook you will:\n",
+    "1. Define the target file/module for export using `#| default_exp` directive\n",
+    "2. Mark selected cells for export using `#| export` directive\n",
+    "3. Export the selected cells to a module in the `dashboard` package using the `nb_export()` function."
    ]
   },
   {
@@ -19,17 +29,7 @@
     "\n",
     "- [modular nbdev](https://nbdev.fast.ai/tutorials/modular_nbdev.html) - makes use of only the most basic features of nbdev. It will allow us take any standalone notebook and turn it into a Python script or module. Modular nbdev will allow us to bridge the gap between messy, exploratory tutorial notebooks and clean, well-organized Python modules that we can import from. \n",
     "\n",
-    "The following introduction to \"modular nbdev\" is a much simpler than the full [nbdev tutorial](https://nbdev.fast.ai/tutorials/tutorial.html) because we won't create a continuous integration Python package that can be uploaded to PyPi and/or Anaconda. We will simply use notebooks to create clean Python modules that we can use to build our dashboards and web apps. From here on out, when we mention \"nbdev\", we are really referring to \"modular nbdev.\"\n",
-    "\n",
-    "### End Goal\n",
-    "\n",
-    "The end goal of this tutorial notebook is to understand how we can use nbdev to create a `dashboard` Python module that contains all the files we need for our dashboard.\n",
-    "\n",
-    "### Steps You Will Take In This Notebook\n",
-    "In this notebook you will:\n",
-    "1. Define the target file/module for export using `#| default_exp` directive\n",
-    "2. Mark selected cells for export using `#| export` directive\n",
-    "3. Export the selected cells to a module in the `dashboard` package using the `nb_export()` function."
+    "The following introduction to \"modular nbdev\" is a much simpler than the full [nbdev tutorial](https://nbdev.fast.ai/tutorials/tutorial.html) because we won't create a continuous integration Python package that can be uploaded to PyPi and/or Anaconda. We will simply use notebooks to create clean Python modules that we can use to build our dashboards and web apps. From here on out, when we mention \"nbdev\", we are really referring to \"modular nbdev.\""
    ]
   },
   {
